--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
+/* утилиты/переменные */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
 *{
     margin: 0;
     padding: 0;
@@ -17,8 +17,20 @@ body{
     color: #0369D9;
 }
 
+.global{
+    /* width: 80%; */
+    margin: auto;
+}
+
+:root{
+    --gray_color: #909090;
+    --blue-color: #0369D9;
+}
+/*.*/
+
+/* шапка */
 header{
-    width: 100%;
+    width: 80%;
     height: 116px;
     background-color: #F4F4F4;
     display: flex;
@@ -39,14 +51,19 @@ header{
     display: flex;
     gap: 30px;
     align-items: center;
-    color: #909090;
+    color: var(--gray_color);
     font-weight: 500;
     font-size: 15px;
+}
+
+.list > li > a{
+    color: #909090;
 }
 
 .number{
     font-weight: 800;
     font-size: 20px;
+    padding-left: 10px;
 }
 
 .callback{
@@ -58,14 +75,13 @@ header{
     height: 55px;
     border: 2px solid #2DBF60;
     border-radius: 30px;
-    color: #060606;
-    font-weight: 700;
-    font-size: 1rem;
+    margin-top: -10px;
 }
 
-.global{
-    width: 80%;
-    margin: auto;
+.greenb > a{
+    color: #060606;
+    font-weight: 700;
+    font-size: 16px;
 }
 
 .logo{
@@ -119,10 +135,12 @@ header{
     bottom: 50%;
     transform: rotate(-45deg) translate(0, 50%);
 }
+/* конец шапки */
 
+/* услуги */
 .headerpresent{
     display: flex;
-    gap: 30px;
+    justify-content: space-evenly;
 }
 
 .titlecontainer{
@@ -134,7 +152,6 @@ header{
     font-weight: 700;
     font-size: 36px;
     line-height: 46px;
-    letter-spacing: -0.11px;
     padding-bottom: 10px;
 }
 
@@ -154,6 +171,7 @@ header{
     color: #FFFFFF;
     font-weight: 700;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .phoneimg{
@@ -202,17 +220,23 @@ header{
     color: #000000;
 }
 
+.oldsale{
+    color: var(--gray_color);
+}
+
 .cardbut{
     width: 245px;
     height: 55px;
-    background-color: #0369D9;
+    background-color: var(--blue-color);
     border: none;
     border-radius: 27px;
     margin-top: 15px;
     margin-bottom: 15px;
     color: #F4F4F4;
     font-weight: 700;
+    cursor: pointer;
 }
+/* конец услуг */
 
 .example{
     display: flex;
@@ -371,7 +395,7 @@ header{
     width: 55%;
     height: max-content;
     background-color: #FFFFFF;
-    border: 2px solid #0369D9;
+    border: 2px solid var(--blue-color);
     border-radius: 25px;
     display: flex;
     flex-direction: column;
@@ -429,8 +453,12 @@ header{
 }
 
 @media (max-width:1290px) {
-    .global{
+    header{
         width: 100%;
+    }
+
+    .global{
+        /* width: 100%; */
         margin: auto;
     } 
     .burger {
@@ -443,7 +471,7 @@ header{
         display: flex;
         flex-direction: column;
         align-items: center;
-        position: fixed;
+        position: absolute;
         top: 116px;
         width: 100%;
         height: max-content;
