--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ header{
 
 .oldsale{
     color: var(--gray_color);
+    text-decoration: line-through;
 }
 
 .cardbut{
@@ -256,6 +257,17 @@ header{
     font-size: 3rem;
     margin-top: 100px;
     margin-bottom: 50px;
+}
+
+.saw{
+    margin-left: 90px;
+}
+.pizza{
+    margin-top: 50px;
+}
+.doctors{
+    margin-left: 60px; 
+    margin-top: 12px;
 }
 
 .examplecardwrapp{
@@ -558,6 +570,16 @@ header{
 @media (max-width:660px) {
     .phoneimg{
         display: none;
+    }
+
+    .saw{
+        margin-left: 60px;
+    }
+    .pizza{
+        margin-left: -7px;
+    }
+    .doctors{
+        margin-left: 10px;
     }
 
     .examplecardwrapp{
